crates/chapbook-ffi/include/chapbook.h

typedef enum cb_status cb_status;
typedef int32_t cb_status;
typedef enum cb_format cb_format;
typedef uint32_t cb_format;
typedef enum cb_reading_direction cb_reading_direction;
typedef uint32_t cb_reading_direction;
typedef enum cb_action cb_action;
typedef uint32_t cb_action;
typedef enum cb_key cb_key;
typedef uint32_t cb_key;
typedef enum cb_action_outcome cb_action_outcome;
typedef uint32_t cb_action_outcome;
typedef enum cb_log_level cb_log_level;
typedef int32_t cb_log_level;
typedef enum cb_book_kind cb_book_kind;
typedef uint32_t cb_book_kind;
typedef enum cb_settings_scope cb_settings_scope;
typedef uint32_t cb_settings_scope;
typedef struct cb_config cb_config;
typedef struct cb_font_source cb_font_source;
typedef struct cb_http_response cb_http_response;
typedef struct cb_library cb_library;
typedef struct cb_session cb_session;
typedef void (*cb_http_finalize_fn)(void *user);
typedef void (*cb_wake_fn)(void *user);
typedef void (*cb_http_get_fn)(const struct cb_http_request *request,
                               struct cb_http_response *response,
                               void *user);
typedef void (*cb_log_fn)(cb_log_level level, const char *target, const char *message, void *user);
typedef struct cb_metrics {
    float width;
    float height;
    float margin_top;
    float margin_right;
    float margin_bottom;
    float margin_left;
    float dpi_scale;
    cb_rotation rotation;
} cb_metrics;
typedef struct cb_position {
    size_t spine;
    size_t page;
} cb_position;
typedef struct cb_settings {
    float base_font_px;
    float line_height;
    bool justify;
    bool publisher_styles;
    cb_theme theme;
} cb_settings;
typedef struct cb_rect {
    float x;
    float y;
    float w;
    float h;
} cb_rect;
typedef struct cb_text_run {
    struct cb_rect rect;
    uint32_t locator_start;
    uint32_t locator_end;
} cb_text_run;
typedef struct cb_word_span {
    uint32_t text_start;
    uint32_t text_end;
    uint32_t locator_start;
    uint32_t locator_end;
} cb_word_span;
typedef struct cb_session_event {
    enum cb_session_event_kind kind;
    size_t spine;
    size_t page;
    const char *message;
} cb_session_event;
uint32_t cb_abi_version(void);
uint32_t cb_capabilities(void);
struct cb_font_source *cb_font_source_host(void);
struct cb_font_source *cb_font_source_embedded(const char *dir, const char *family);
cb_status cb_font_source_add_dir(struct cb_font_source *fonts, const char *dir);
cb_status cb_font_source_set_generics(struct cb_font_source *fonts,
                                      const char *serif,
                                      const char *sans_serif,
                                      const char *monospace,
                                      const char *cursive,
                                      const char *fantasy);
cb_status cb_font_source_use_platform_generics(struct cb_font_source *fonts);
void cb_font_source_free(struct cb_font_source *fonts);
struct cb_config *cb_config_new(struct cb_font_source *fonts);
cb_status cb_config_set_library_dir(struct cb_config *config, const char *dir);
cb_status cb_config_set_cache_budget(struct cb_config *config, size_t bytes);
void cb_config_free(struct cb_config *config);
cb_status cb_http_response_set_status(struct cb_http_response *response, uint16_t status);
cb_status cb_http_response_set_content_type(struct cb_http_response *response,
                                            const char *content_type);
cb_status cb_http_response_add_header(struct cb_http_response *response,
                                      const char *name,
                                      const char *value);
cb_status cb_http_response_append_body(struct cb_http_response *response,
                                       const uint8_t *bytes,
                                       size_t len);
cb_status cb_http_response_fail(struct cb_http_response *response, const char *message);
cb_status cb_config_set_http_transport(struct cb_config *config,
                                       cb_http_get_fn get,
                                       cb_http_finalize_fn finalize,
                                       void *user);
cb_status cb_session_reading_direction(const struct cb_session *session,
                                       cb_reading_direction *direction);
cb_status cb_session_set_tap_zones(struct cb_session *session,
                                   float prev_fraction,
                                   float next_fraction,
                                   cb_action middle);
cb_status cb_session_tap_action(const struct cb_session *session,
                                float x,
                                float y,
                                cb_action *action);
cb_action cb_key_default_action(cb_key key);
cb_action cb_char_default_action(uint32_t codepoint);
cb_status cb_session_apply(struct cb_session *session,
                           cb_action action,
                           cb_action_outcome *outcome);
cb_status cb_library_open(const char *dir, struct cb_library **out);
cb_status cb_set_log_callback(cb_log_fn callback, void *user, cb_log_level max_level);
cb_status cb_log(cb_log_level level, const char *target, const char *message);
bool cb_log_enabled(void);
struct cb_session *cb_session_open_path(const char *path, struct cb_config *config);
struct cb_session *cb_session_open_bytes(const uint8_t *bytes,
                                         size_t len,
                                         cb_format format,
                                         struct cb_config *config);
struct cb_session *cb_session_open_url(const char *url, struct cb_config *config);
void cb_session_close(struct cb_session *session);
cb_status cb_last_error_message(char *buf, size_t cap, size_t *needed);
cb_status cb_session_set_metrics(struct cb_session *session, struct cb_metrics metrics);
cb_status cb_session_next_page(struct cb_session *session, bool *moved);
cb_status cb_session_prev_page(struct cb_session *session, bool *moved);
cb_status cb_session_next_unit(struct cb_session *session, bool *moved);
cb_status cb_session_prev_unit(struct cb_session *session, bool *moved);
cb_status cb_session_position(const struct cb_session *session, struct cb_position *position);
cb_status cb_session_spine_len(const struct cb_session *session, size_t *len);
cb_status cb_session_page_count(struct cb_session *session, size_t *count);
cb_status cb_session_title(const struct cb_session *session, char *buf, size_t cap, size_t *needed);
cb_status cb_session_book_kind(const struct cb_session *session, cb_book_kind *kind);
cb_status cb_session_settings(const struct cb_session *session, struct cb_settings *settings);
cb_status cb_session_set_settings(struct cb_session *session,
                                  struct cb_settings settings,
                                  cb_settings_scope scope);
cb_status cb_session_font_family_count(const struct cb_session *session, size_t *count);
cb_status cb_session_font_family_at(const struct cb_session *session,
                                    size_t index,
                                    char *buf,
                                    size_t cap,
                                    size_t *needed);
cb_status cb_session_font_family(const struct cb_session *session,
                                 char *buf,
                                 size_t cap,
                                 size_t *needed);
cb_status cb_session_set_font_family(struct cb_session *session,
                                     const char *family,
                                     cb_settings_scope scope);
cb_status cb_session_render_size(const struct cb_session *session,
                                 uint32_t *width,
                                 uint32_t *height);
cb_status cb_session_render_into(struct cb_session *session,
                                 uint8_t *dst,
                                 size_t len,
                                 uint32_t width,
                                 uint32_t height,
                                 size_t stride);
cb_status cb_session_page_text_run_count(const struct cb_session *session, size_t *count);
cb_status cb_session_page_text_run(const struct cb_session *session,
                                   size_t index,
                                   struct cb_text_run *run);
cb_status cb_session_page_text_run_text(const struct cb_session *session,
                                        size_t index,
                                        char *buf,
                                        size_t cap,
                                        size_t *needed);
cb_status cb_session_range_rects(const struct cb_session *session,
                                 uint32_t start,
                                 uint32_t end,
                                 struct cb_rect *rects,
                                 size_t cap,
                                 size_t *needed);
cb_status cb_session_page_speakable_text(const struct cb_session *session,
                                         char *buf,
                                         size_t cap,
                                         size_t *needed);
cb_status cb_session_page_word_count(const struct cb_session *session, size_t *count);
cb_status cb_session_page_word(const struct cb_session *session,
                               size_t index,
                               struct cb_word_span *span);
cb_status cb_session_word_at(struct cb_session *session,
                             float x,
                             float y,
                             uint32_t *start,
                             uint32_t *end);
cb_status cb_session_suspend(struct cb_session *session);
cb_status cb_session_release_caches(struct cb_session *session);
cb_status cb_session_cache_bytes(const struct cb_session *session, size_t *bytes);
cb_status cb_session_cache_budget(const struct cb_session *session, size_t *bytes);
cb_status cb_session_font_face_count(const struct cb_session *session, size_t *count);
cb_status cb_session_font_unresolved(const struct cb_session *session,
                                     char *buf,
                                     size_t cap,
                                     size_t *needed);
cb_status cb_session_set_waker(struct cb_session *session, cb_wake_fn wake, void *user);
cb_status cb_session_poll_loaded(struct cb_session *session, bool *changed);
cb_status cb_session_has_pending_loads(const struct cb_session *session, bool *pending);
cb_status cb_session_next_event(struct cb_session *session, struct cb_session_event *out);